force-app/main/default/objects/Branch_Location__c/Branch_Location__c.object-meta.xml
<CustomObject>
    <label>Branch Location</label>
    <nameField>
        <label>Branch Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>