force-app/main/default/objects/Branch_Location__c/fields/Cabinet_Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used to populate a default &apos;cabinet field manager&apos;</inlineHelpText>
    <label>Default Cabinet Field Manager</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Branch Locations (Default Cabinet Field Manager)</relationshipLabel>
    <relationshipName>Branch_Locations3</relationshipName>
    <type>Lookup</type>
</CustomField>