force-app/main/default/objects/Branch_Location__c/fields/CS_Case_Creation__c.field-meta.xml
<CustomField>
    <fullName>CS_Case_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Creation</label>
    <type>Checkbox</type>
</CustomField>