force-app/main/default/objects/Branch_Location__c/fields/CS_Case_Status_Changes__c.field-meta.xml
<CustomField>
    <fullName>CS_Case_Status_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Status Changes</label>
    <type>Checkbox</type>
</CustomField>