force-app/main/default/objects/Branch_Location__c/fields/Day_Count_Tile_Backsplash__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Tile_Backsplash__c</fullName>
    <label>Day Count Tile Backsplash</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>