force-app/main/default/objects/Branch_Location__c/fields/Default_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integration uses this field to set the default account owner on newly created accounts. It must be manually maintained.</description>
    <label>Default Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>