force-app/main/default/objects/Branch_Location__c/fields/Default_Cabinet_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Cabinet_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Cabinet Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Locations2</relationshipName>
    <type>Lookup</type>
</CustomField>