force-app/main/default/objects/Branch_Location__c/fields/Default_Installer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Installer_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Installer Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>As_Default_Installer_Account_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>