force-app/main/default/objects/Branch_Location__c/fields/Default_WO_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Default_WO_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default WO Delivery</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Branch Locations (Default WO Delivery)</relationshipLabel>
    <relationshipName>Branch_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>