force-app/main/default/objects/Branch_Location__c/fields/Default_WO_Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Default_WO_Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default WO Field Manager</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Branch Locations</relationshipLabel>
    <relationshipName>Branch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>