force-app/main/default/objects/Branch_Location__c/fields/Default_WO_Pre_Walk__c.field-meta.xml
<CustomField>
    <fullName>Default_WO_Pre_Walk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default WO Pre-Walk</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Branch Locations (Default WO Pre-Walk)</relationshipLabel>
    <relationshipName>Branch_Locations2</relationshipName>
    <type>Lookup</type>
</CustomField>