force-app/main/default/objects/Branch_Location__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Branch Locations</relationshipLabel>
    <relationshipName>Branch_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>