force-app/main/default/objects/Branch_Location__c/fields/Escalated_Case_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Case_Notifications__c</fullName>
    <label>Escalated Case Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>