force-app/main/default/objects/Branch_Location__c/fields/INT_Community_Fields_On_Update__c.field-meta.xml
<CustomField>
    <fullName>INT_Community_Fields_On_Update__c</fullName>
    <label>INT Community Fields On Update</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual # Of Houses</fullName>
            </value>
            <value>
                <fullName>Build Cycle for Community</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Builder ID (18)</fullName>
            </value>
            <value>
                <fullName>Builder Profile</fullName>
            </value>
            <value>
                <fullName>Business Hours</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Channel of Business</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Community ID(18)</fullName>
            </value>
            <value>
                <fullName>Community Status</fullName>
            </value>
            <value>
                <fullName>Community Type</fullName>
            </value>
            <value>
                <fullName>Created By</fullName>
            </value>
            <value>
                <fullName>Day Count Build Sheet</fullName>
            </value>
            <value>
                <fullName>Day Count Carpet</fullName>
            </value>
            <value>
                <fullName>Day Count Countertops</fullName>
            </value>
            <value>
                <fullName>Day Count Fine Tune</fullName>
            </value>
            <value>
                <fullName>Day Count Floor Wall Tile</fullName>
            </value>
            <value>
                <fullName>Day Count LVT</fullName>
            </value>
            <value>
                <fullName>Day Count Product Inspection</fullName>
            </value>
            <value>
                <fullName>Day Count QC End</fullName>
            </value>
            <value>
                <fullName>Day Count Tile Backsplash</fullName>
            </value>
            <value>
                <fullName>Day Count Vinyl</fullName>
            </value>
            <value>
                <fullName>Day Count Wood</fullName>
            </value>
            <value>
                <fullName>Days to Dried-In</fullName>
            </value>
            <value>
                <fullName>Days to Final</fullName>
            </value>
            <value>
                <fullName>Days to Finish/Install</fullName>
            </value>
            <value>
                <fullName>Days to Framing</fullName>
            </value>
            <value>
                <fullName>Days to Install</fullName>
            </value>
            <value>
                <fullName>Days to Order Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>