force-app/main/default/objects/Branch_Location__c/fields/INT_Local_Account_Fields_On_Update__c.field-meta.xml
<CustomField>
    <fullName>INT_Local_Account_Fields_On_Update__c</fullName>
    <label>INT Local Account Fields On Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName># of Crews</fullName>
            </value>
            <value>
                <fullName>Account Id (18)</fullName>
            </value>
            <value>
                <fullName>Account Name</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>Account Record Type</fullName>
            </value>
            <value>
                <fullName>Account Short Name</fullName>
            </value>
            <value>
                <fullName>Account Site</fullName>
            </value>
            <value>
                <fullName>Account Source</fullName>
            </value>
            <value>
                <fullName>Account Status</fullName>
            </value>
            <value>
                <fullName>Additional Job Types</fullName>
            </value>
            <value>
                <fullName>ADG Rebate</fullName>
            </value>
            <value>
                <fullName>ADG Rebate (Parent)</fullName>
            </value>
            <value>
                <fullName>Annual Revenue</fullName>
            </value>
            <value>
                <fullName>Approval Status</fullName>
            </value>
            <value>
                <fullName>Average # of Homes/Units built/year</fullName>
            </value>
            <value>
                <fullName>Average Closing Price</fullName>
            </value>
            <value>
                <fullName>Average Spend Per House/Unit</fullName>
            </value>
            <value>
                <fullName>Avg jobs per week</fullName>
            </value>
            <value>
                <fullName>Avg. Living Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>Avg. Price per Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>Blinds</fullName>
            </value>
            <value>
                <fullName>Builder Profile Community Link</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Classification</fullName>
            </value>
            <value>
                <fullName>Closed Won (Parent)</fullName>
            </value>
            <value>
                <fullName>Created By</fullName>
            </value>
            <value>
                <fullName>Crewsize</fullName>
            </value>
            <value>
                <fullName>Cust_Addr1</fullName>
            </value>
            <value>
                <fullName>Cust_Addr2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>