force-app/main/default/objects/Branch_Location__c/fields/Integration_Key_Location__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_Location__c</fullName>
    <label>Integration Key (Branch Location)</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>