force-app/main/default/objects/Branch_Location__c/fields/Notification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Notification_Notes__c</fullName>
    <label>Notification Notes</label>
    <type>TextArea</type>
</CustomField>