force-app/main/default/objects/Branch_Location__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Only</fullName>
            </value>
            <value>
                <fullName>Email &amp; Salesforce Notification</fullName>
            </value>
            <value>
                <fullName>Salesforce Notification Only</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>