force-app/main/default/objects/Branch_Location__c/fields/Orphaned_House_Owner__c.field-meta.xml
<CustomField>
    <fullName>Orphaned_House_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orphaned House Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>