force-app/main/default/objects/Branch_Location__c/fields/QC_Build_Sheet__c.field-meta.xml
<CustomField>
    <fullName>QC_Build_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Build Sheet</label>
    <type>Checkbox</type>
</CustomField>