force-app/main/default/objects/Branch_Location__c/fields/QC_Day_Count_Notes__c.field-meta.xml
<CustomField>
    <fullName>QC_Day_Count_Notes__c</fullName>
    <label>QC / Day Count Notes</label>
    <type>TextArea</type>
</CustomField>