force-app/main/default/objects/Branch_Location__c/fields/QC_Fine_Tune_Checklist__c.field-meta.xml
<CustomField>
    <fullName>QC_Fine_Tune_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Fine Tune Checklist</label>
    <type>Checkbox</type>
</CustomField>