force-app/main/default/objects/Branch_Location__c/fields/QC_Floor_Wall_Tile_Install__c.field-meta.xml
<CustomField>
    <fullName>QC_Floor_Wall_Tile_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Floor Wall Tile Install</label>
    <type>Checkbox</type>
</CustomField>