force-app/main/default/objects/Branch_Location__c/fields/QC_Product_Inspection__c.field-meta.xml
<CustomField>
    <fullName>QC_Product_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Product Inspection</label>
    <type>Checkbox</type>
</CustomField>