force-app/main/default/objects/Branch_Location__c/fields/QC_Tile_Backsplash_Install__c.field-meta.xml
<CustomField>
    <fullName>QC_Tile_Backsplash_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Tile Backsplash Install</label>
    <type>Checkbox</type>
</CustomField>