force-app/main/default/objects/Branch_Location__c/fields/QC_Vinyl_Install__c.field-meta.xml
<CustomField>
    <fullName>QC_Vinyl_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Vinyl Install</label>
    <type>Checkbox</type>
</CustomField>