force-app/main/default/objects/Branch_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Default_Account_Owner__c</columns>
    <columns>Orphaned_House_Owner__c</columns>
    <columns>Default_Installer_Owner__c</columns>
    <columns>Integration_Key_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>